adding the components import in the standalone components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-nav-bar> </app-nav-bar>
+<div>
+
+    <app-navbar></app-navbar>
+</div>
 <div>
     <app-list-dogs></app-list-dogs>
     <app-create-dog></app-create-dog>
