initial idea for forms, modal and card

--- a/src/app/list-dogs/dog-info-modal/dog-info-modal.component.html
+++ b/src/app/list-dogs/dog-info-modal/dog-info-modal.component.html
@@ -1,1 +1,16 @@
-<p>dog-info-modal works!</p>
+<button>X</button>
+<img src="" alt="">
+<div>
+<div>
+<h1>Dog</h1>
+<p>Male</p>
+<p>Some breed</p>
+</div>
+<p>15cm</p>
+<p>40kg</p>
+
+<p>About</p>
+<button>Edit</button>
+<button>Delete</button>
+
+</div>
