adding some details

--- a/src/app/list-dogs/dog-info-modal/dog-info-modal.component.html
+++ b/src/app/list-dogs/dog-info-modal/dog-info-modal.component.html
@@ -10,6 +10,11 @@
 <p>40kg</p>
 
 <p>About</p>
+
+<!-- when deleting -->
+<p>Dog's data will be lost forever</p>
+<p>Are you sure that you want to delete it?</p>
+
 <button>Edit</button>
 <button>Delete</button>
 
