making some experiments with styling in the components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
     <app-navbar></app-navbar>
 </div>
-<div>
+<div class="container">
     <app-list-dogs></app-list-dogs>
     <app-create-dog></app-create-dog>
     <app-edit-dog></app-edit-dog>
