--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,6 @@
     <app-navbar></app-navbar>
 </div>
 <div class="container">
-    <app-list-dogs></app-list-dogs>
-    <app-create-dog></app-create-dog>
-    <app-edit-dog></app-edit-dog>
+    <router-outlet></router-outlet>
+    
 </div>
