using the service data and some adjustments

--- a/src/app/edit-dog/edit-dog.component.html
+++ b/src/app/edit-dog/edit-dog.component.html
@@ -1,4 +1,4 @@
-<h1>Editing {{name}}</h1>
+<h1>Editing {{dog.name}}</h1>
 
 <form action="">
     <div class="inputs">
@@ -45,7 +45,7 @@
     </label>
 </div>
     <div class="buttons">
-    <button class="edit" type="submit">Edit {{name}}</button>
+    <button class="edit" type="submit">Edit {{dog.name}}</button>
     <button class="cancel">Cancel</button>
 </div>
 </form>
