--- a/src/app/list-dogs/dog-card/dog-card.component.html
+++ b/src/app/list-dogs/dog-card/dog-card.component.html
@@ -1,7 +1,7 @@
-<div class="card" [ngClass]="{'male': dog.gender === 'male','female': dog.gender === 'female'}">
+<a [routerLink]="[ '/dogs', dog.id ]" class="card" [ngClass]="{'male': dog.gender === 'male','female': dog.gender === 'female'}">
     <div class="info">
-        <h2>Dog</h2>
-        <p class="breed">Some breed</p>
+        <h2>{{dog.name}}</h2>
+        <p class="breed">{{dog.breed}}</p>
     </div>
-    <img src="https://www.azpetshop.com.br/blog/wp-content/uploads/2021/09/Chihuahua.jpg" alt="Photo">
-</div>
+    <img src="{{dog.photo}}" alt="{{dog.name}}">
+</a>
