--- a/src/app/list-dogs/list-dogs.component.html
+++ b/src/app/list-dogs/list-dogs.component.html
@@ -1,5 +1,5 @@
 <h1>My Dogs</h1>
-<button routerLink="/dogs/new">New Dog</button>
+<button class="base" routerLink="/dogs/new">New Dog</button>
 @for(d of dogs; track d.id){
     <app-dog-card [dog]="d"></app-dog-card>
 
