--- a/src/app/dog-detail/dog-detail.component.scss
+++ b/src/app/dog-detail/dog-detail.component.scss
@@ -1,15 +1,11 @@
 .modal{
     
-    padding: 1rem;
-    position: relative;
-    border: 1px solid black;
     display: flex;
     height: auto;
     gap: 1rem;
 
     img{
         width: 50%;
-        border-radius: 100%;
     }
 
     
@@ -20,11 +16,7 @@
         display: flex;
        flex-direction: column;
         
-    h2{
-        
-        font-size: 1.5rem;
-        margin-bottom: 0.5rem;
-    }
+    
 
     .breed{
         color:grey;
@@ -39,13 +31,10 @@
         width: 100%;
         justify-content: center;
         p{
-            padding: 0.5rem 1rem;
-            background-color: lightsalmon;
+            padding: 0.75rem 2rem;
+            border: 1px solid var(--black-color);
+            border-radius: 25px;
         }
-    }
-
-    .buttons{
-        margin-top: auto;
     }
     
 
