--- a/src/app/list-dogs/dog-card/dog-card.component.scss
+++ b/src/app/list-dogs/dog-card/dog-card.component.scss
@@ -1,10 +1,16 @@
 .card{
-    
+    cursor: pointer;
     width: 400px;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
     border-radius: 20px;
+
+    &:focus, &:hover{
+        -webkit-box-shadow: 0px 2px 16px -4px var(--black-color);
+        -moz-box-shadow: 0px 2px 16px -4px var(--black-color);
+        box-shadow: 0px 2px 16px -4px var(--black-color);
+    }
 
     &.male{
         border: 2px solid cornflowerblue;
@@ -16,12 +22,9 @@
 
     .info{
         padding: 1rem 1rem 0.5rem 1rem;
-        h2{
-            font-size: 1.5rem;
-            margin-bottom: 0.5rem;
-        }
+        
         .breed{
-            color:grey;
+            color:gray;
             font-style: italic;
         }
     }
