--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
 .container{
-    padding: 1rem 20%;
+    margin: 0 auto;
+    max-width: 960px;
+}
+
+@media (max-width: 576px) {
+    .container {
+        max-width: 100%;
+    }
 }
