--- a/src/app/list-dogs/dog-card/dog-card.component.scss
+++ b/src/app/list-dogs/dog-card/dog-card.component.scss
@@ -1,30 +1,23 @@
 .card{
     cursor: pointer;
-    width: 400px;
     display: flex;
     flex-direction: column;
     border: 2px solid black;
     border-radius: 20px;
 
-    &:focus, &:hover{
-        -webkit-box-shadow: 0px 2px 16px -4px var(--black-color);
-        -moz-box-shadow: 0px 2px 16px -4px var(--black-color);
-        box-shadow: 0px 2px 16px -4px var(--black-color);
-    }
-
     &.male{
-        border: 2px solid cornflowerblue;
+        border: 2px solid var(--male-gender-color);
     }
 
     &.female{
-        border: 2px solid lightcoral;
+        border: 2px solid var(--female-gender-color);
     }
 
     .info{
         padding: 1rem 1rem 0.5rem 1rem;
         
         .breed{
-            color:gray;
+            color:var(--gray-color);
             font-style: italic;
         }
     }
