--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,5 @@
 <nav class="navbar">
-    
+    <div class="container">
+    <a [routerLink]="'/dogs'" class="to-home">DOGS CRUD <img src="assets/dog-paw.svg" alt="Dog paw"></a>
+</div>
 </nav>
