--- a/src/app/dog-detail/dog-detail.component.html
+++ b/src/app/dog-detail/dog-detail.component.html
@@ -10,6 +10,7 @@
             <p class="breed">{{dogInfo.breed}}</p>
         </div>
         <div class="body-data">
+            <p>{{dogInfo.age}} year(s)</p>
         <p>{{dogInfo.height}}cm</p>
         <p>{{dogInfo.weight}}kg</p>
         </div>
