--- a/src/app/edit-dog/edit-dog.component.html
+++ b/src/app/edit-dog/edit-dog.component.html
@@ -1,51 +1,106 @@
 <h1>Editing {{dog.name}}</h1>
 
-<form action="">
+<form [formGroup]="editDogData" (ngSubmit)="onSubmit()">
     <div class="inputs">
     <label for="name">
-        Name
-        <input type="text" name="name" id="name" value="{{dog.name}}" required>
+        <div>
+            Name<span class="required">*</span>
+        </div>
+        <input type="text" name="name" id="name" formControlName="name" [value]="dog.name" >
+        @if( editDogData.get('name').status === "INVALID" || editDogData.get('name').touched && !editDogData.get('name').valid){
+            <div>
+            <small>Name is required</small>
+            </div>
+        }
     </label>
 
     <label for="age">
-        Age
-        <input type="number" name="age" id="age" value="{{dog.age}}" required>
+        <div>
+            Age<span class="required">*</span>
+        </div>
+        <input type="number" name="age" id="age" formControlName="age" min="0" max="20" [value]="dog.age" >
+        @if( editDogData.get('age').status === "INVALID" || editDogData.get('age').touched && !editDogData.get('age').valid){
+            <div>
+            <small>Age is required</small>
+            </div>
+        }
     </label>
 
     <label for="gender">
-        Gender
-        <select name="gender" id="gender">
-            <option value="-------">-------</option>
-            <option value="male" selected="{{dog.gender==='male'}}">Male</option>
-            <option value="female" selected="{{dog.gender==='female'}}">Female</option>
+        <div>
+            Gender<span class="required">*</span>
+        </div>
+        <select name="gender" id="gender" formControlName="gender" >
+            
+            <option value="male" [selected]="dog.gender==='male'">Male</option>
+            <option value="female" [selected]="dog.gender==='female'">Female</option>
         </select>
+
+        @if(editDogData.get('gender').status === "INVALID" || editDogData.get('gender').touched && !editDogData.get('gender').valid){
+            <div>
+            <small>Gender is required</small>
+            </div>
+        }
     </label>
 
     <label for="breed">
-        Breed
-        <input type="text" name="breed" id="breed" value="{{dog.breed}}" required>
+        <div>
+            Breed<span class="required">*</span>
+        </div>
+        <input type="text" name="breed" id="breed" [value]="dog.breed" formControlName="breed" >
+        @if(editDogData.get('breed').status === "INVALID" || editDogData.get('breed').touched && !editDogData.get('breed').valid){
+            <div>
+            <small>Breed is required</small>
+            </div>
+        }
     </label>
     <label for="height">
-        Height
-        <input type="number" name="height" id="height" value="{{dog.height}}" required>
+        <div>
+            Height<span class="required">*</span>
+        </div>
+        <input type="number" name="height" id="height" min="0.1" [value]="dog.height" formControlName="height" >
+        @if(editDogData.get('height').status === "INVALID" || editDogData.get('height').touched && !editDogData.get('height').valid){
+            <div>
+            <small>Height is required</small>
+            </div>
+        }
     </label>
     <label for="weight">
-        Weight
-        <input type="number" name="weight" id="weight" value="{{dog.weight}}" required>
+        <div>
+            Weight<span class="required">*</span>
+        </div>
+        <input type="number" name="weight" id="weight" min="0.1" [value]="dog.weight" formControlName="weight" >
+        @if(editDogData.get('weight').status === "INVALID" || editDogData.get('weight').touched && !editDogData.get('weight').valid){
+            <div>
+            <small>Weight is required</small>
+            </div>
+        }
     </label>
 
     <label for="photo">
-        Photo
-        <input type="file" name="photo" id="photo" accept="image/png, image/jpeg">
+        <div>
+            Photo<span class="required">*</span>
+        </div>
+        <input type="text" name="photo" id="photo" [value]="dog.photo" formControlName="photo" >
+        @if( editDogData.get('photo').touched || !editDogData.get('photo').valid  ){
+            <div>
+            @if(editDogData.get('photo').value===''){
+            <small>Photo is required</small>
+            }
+            @else{
+                <small>Invalid URL. It needs to end with .jpg or .png</small>
+            }
+            </div>
+        }
     </label>
 
     <label for="about">
         About
-        <textarea name="about" id="about" value="{{dog.about}}"></textarea>
+        <textarea name="about" id="about" [value]="dog.about" formControlName="about"></textarea>
     </label>
 </div>
     <div class="buttons">
     <button class="edit" type="submit">Edit {{dog.name}}</button>
-    <button class="cancel">Cancel</button>
+    <button class="cancel" type="button" [routerLink]="['/dogs']">Cancel</button>
 </div>
 </form>
