--- a/src/app/list-dogs/dog-card/dog-card.component.html
+++ b/src/app/list-dogs/dog-card/dog-card.component.html
@@ -1,7 +1,9 @@
 <div [routerLink]="[ '/dogs', dog.id ]" class="card" [ngClass]="{'male': dog.gender === 'male','female': dog.gender === 'female'}">
     <div class="info">
-        <h2>{{dog.name}}</h2>
+        <h3>{{dog.name}}</h3>
         <p class="breed">{{dog.breed}}</p>
     </div>
+    <div class="img-container">
     <img src="{{dog.photo}}" alt="{{dog.name}}">
+    </div>
 </div>
