--- a/src/app/list-dogs/list-dogs.component.scss
+++ b/src/app/list-dogs/list-dogs.component.scss
@@ -1,3 +1,10 @@
+.list-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
 .grid{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(calc(calc(100% / 3) - 20px), 1fr));
