--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,37 @@
 .navbar{
     height: 3rem;
     background-color: var(--pure-base-color);
+    margin-bottom: 1rem;
+
+    .container{
+        margin: 0 auto;
+        max-width: 960px;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    @media (max-width: 576px) {
+        .container {
+            max-width: 100%;
+        }
+    }
+
+    .to-home{
+        color: var(--dark-base-color);
+        font-weight: var(--font-weight-500);
+        font-size: var(--font-size-4);
+
+        img{
+            width: var(--font-size-3);
+            height: var(--font-size-3);
+            color: var(--dark-base-color);
+            fill: var(--dark-base-color);
+            filter: invert(43%) sepia(44%) saturate(565%) hue-rotate(354deg) brightness(96%) contrast(84%);
+        }
+    }
 }
+
+
+
