--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,8 @@
   --female-gender-color: #E57AA6;
 
   --black-color: #04070E;
+  --dark-gray-color: #494E66;
+  --medium-gray-color: #B7C2CD;
   --gray-color:#E4E9EC;
   --white-color:#FCFFFF;
 
@@ -129,6 +131,10 @@ table {
     font-weight: var(--font-weight-300);
   }
 
+  h1,h2,h3,h4,h5,h6,p{
+    color:var(--black-color)
+  }
+
 
 a{
   text-decoration: none;
@@ -152,6 +158,7 @@ a{
   button{
     border-radius: 25px;
     padding: 0.75rem 1.5rem;
+    height: 2.5rem;
     font-weight: var(--font-weight-400);
     letter-spacing: 10%;
     text-transform: uppercase;
@@ -239,15 +246,15 @@ a{
       }
     }
 
-    &.button:disabled{
+    &:disabled, &:disabled:hover{
       background-color: var(--gray-color);
-      color: var(--black-color);
+      color: var(--medium-gray-color);
       cursor: not-allowed;
     }
   }
 
 
-  input, select{
+  input, select, textarea{
     border-radius: 4px;
     border: 1px solid var(--black-color);
     color: var(--black-color);
