--- a/src/app/edit-dog/edit-dog.component.scss
+++ b/src/app/edit-dog/edit-dog.component.scss
@@ -48,5 +48,5 @@ label[for="name"] {
     "breed height weight" auto
     "photo photo photo" auto
     "about about about" 6rem / 2fr 1fr 1fr; 
-    column-gap: 0.5rem;
+    gap: 0.5rem;
   }
