--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,12 @@
 .container{
-    margin: 0 auto;
+    margin: 0 auto 1rem auto;
     max-width: 960px;
+    
 }
 
-@media (max-width: 576px) {
+@media (max-width: 960px) {
     .container {
         max-width: 100%;
+        padding: 0 0.5rem;
     }
-}
+  }
