--- a/src/app/dog-detail/dog-detail.component.scss
+++ b/src/app/dog-detail/dog-detail.component.scss
@@ -1,20 +1,39 @@
-.modal{
+.detail{
     
     display: flex;
     height: auto;
     gap: 1rem;
 
-    img{
-        width: 50%;
-    }
+    .img-container {
+        width: 25%;
+        flex-grow: 1; 
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+    }
     
     .info{
         
-        width: 100%;
+        width: 75%;
         
         display: flex;
        flex-direction: column;
+
+       h1.male{
+        color: var(--male-gender-color);
+        }    
+
+        h1.female{
+            color: var(--female-gender-color);
+        }
         
     
 
@@ -34,6 +53,16 @@
             padding: 0.75rem 2rem;
             border: 1px solid var(--black-color);
             border-radius: 25px;
+        }
+
+        &.male p{
+            
+            border: 1px solid var(--male-gender-color);
+        }
+
+        &.female p{
+            
+            border: 1px solid var(--female-gender-color);
         }
     }
     
