--- a/src/app/list-dogs/dog-card/dog-card.component.scss
+++ b/src/app/list-dogs/dog-card/dog-card.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     border: 2px solid black;
-    max-height: 280px;
+    height: 280px;
     border-radius: 20px;
     overflow: hidden;
 
@@ -17,6 +17,7 @@
 
     .info{
         padding: 1rem 1rem 0.5rem 1rem;
+        flex-shrink: 0;
         
         .breed{
             color:var(--dark-gray-color);
