--- a/src/app/list-dogs/list-dogs.component.scss
+++ b/src/app/list-dogs/list-dogs.component.scss
@@ -11,4 +11,15 @@
     gap: 20px; 
     max-width: 960px; 
     margin: 0 auto;
+    @media (min-width: 576px) and (max-width: 960px) {
+        & {
+            grid-template-columns: repeat(auto-fill, minmax(calc(calc(100% / 2) - 20px), 1fr));
+        }
+      }
+
+    @media (max-width: 576px) {
+        & {
+            grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+        }
+    }
 }
