--- a/src/app/create-dog/create-dog.component.scss
+++ b/src/app/create-dog/create-dog.component.scss
@@ -9,7 +9,7 @@ label small{
   font-weight: var(--font-weight-400);
 }
 
-div label[for="name"] {
+label[for="name"] {
     grid-area: name;
   }
 
@@ -36,10 +36,7 @@ div label[for="name"] {
   label[for="about"] {
     
     grid-area: about;
-    textarea{
-        height: 100%;
-        resize: none;
-    }
+    
   }
 
 
@@ -51,4 +48,31 @@ div label[for="name"] {
     "photo photo photo" auto
     "about about about" 6rem / 2fr 1fr 1fr; 
     gap: 0.5rem;
+    margin-bottom: 1rem;
+
+    @media (max-width: 576px) {
+      & {
+          grid-template:
+            "name name" auto
+            "age gender" auto
+            "breed breed" auto
+            "height weight" auto
+            "photo photo" auto
+            "about about" 6rem / 1fr 1fr; 
+        }
+    }
+
+    @media (max-width: 360px) {
+      & {
+        grid-template:
+          "name" auto
+          "age" auto
+          "gender" auto
+          "breed" auto
+          "height" auto
+          "weight" auto
+          "photo" auto
+          "about" 6rem / 1fr;
+      }
+  }
   }
