--- a/src/app/dog-detail/dog-detail.component.scss
+++ b/src/app/dog-detail/dog-detail.component.scss
@@ -1,74 +1,108 @@
 .detail{
     
     display: flex;
+    flex-direction: column;
     height: auto;
     gap: 1rem;
 
-    .img-container {
-        width: 25%;
-        flex-grow: 1; 
-        overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .main-info{
 
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50%;
+        display: flex;
+        gap: 1rem;
+        @media (max-width: 576px) {
+            & {
+                flex-direction: column;
+            }
+        }
+
+        .img-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            @media (max-width: 576px) {
+                & {
+                    width: 100%;
+                }
+            }
+    
+            img {
+                width: 180px;
+                height: 180px;
+                object-fit: cover;
+                border-radius: 50%;
+            }
+        }
+
+        .info{
+        
+            width: 75%;            
+            display: flex;
+           flex-direction: column;
+           gap: 1rem;
+
+           @media (max-width: 576px) {
+            & {
+                text-align: center;
+                width: 100%;
+            }
+        }
+    
+           h1.male{
+            color: var(--male-gender-color);
+            }    
+    
+            h1.female{
+                color: var(--female-gender-color);
+            }
+            
+        
+    
+            .breed{
+                color:var(--dark-gray-color);
+                font-style: italic;
+            }
+    
+    
+        
+            .body-data{
+                display: flex;
+                gap: 0.5rem;
+                width: 100%;
+                justify-content: center;
+                flex-wrap: wrap;
+                p{
+                    padding: 0.75rem 2rem;
+                    border: 1px solid var(--black-color);
+                    border-radius: 25px;
+                }
+    
+                &.male p{
+                    
+                    border: 1px solid var(--male-gender-color);
+                }
+    
+                &.female p{
+                    
+                    border: 1px solid var(--female-gender-color);
+                }
+            }
+        
+    
         }
     }
-    
-    .info{
-        
-        width: 75%;
-        
+    .about{
         display: flex;
-       flex-direction: column;
-
-       h1.male{
-        color: var(--male-gender-color);
-        }    
-
-        h1.female{
-            color: var(--female-gender-color);
-        }
-        
-    
-
-    .breed{
-        color:grey;
-        font-style: italic;
-    }
-
-
-    
-    .body-data{
-        display: flex;
-        gap: 0.5rem;
-        width: 100%;
-        justify-content: center;
-        p{
-            padding: 0.75rem 2rem;
-            border: 1px solid var(--black-color);
+        flex-direction: column;
+        gap: 1rem;
+        .divisor{
+            width: 1.5rem;
+            height: 0.25rem;
+            background-color: var(--pure-base-color);
+            
             border-radius: 25px;
-        }
-
-        &.male p{
-            
-            border: 1px solid var(--male-gender-color);
-        }
-
-        &.female p{
-            
-            border: 1px solid var(--female-gender-color);
+            margin: 0 auto;
         }
     }
-    
-
-    }
-
     
    
 }
