--- a/src/app/edit-dog/edit-dog.component.scss
+++ b/src/app/edit-dog/edit-dog.component.scss
@@ -5,6 +5,7 @@ label span.required{
 label small{
   color: var(--pure-danger-color);
   font-size: var(--font-size-sm-1);
+  font-weight: var(--font-weight-400);
 }
 
 label[for="name"] {
@@ -34,10 +35,7 @@ label[for="name"] {
   label[for="about"] {
     
     grid-area: about;
-    textarea{
-        height: 100%;
-        resize: none;
-    }
+    
   }
 
 
@@ -49,4 +47,31 @@ label[for="name"] {
     "photo photo photo" auto
     "about about about" 6rem / 2fr 1fr 1fr; 
     gap: 0.5rem;
+    margin-bottom: 1rem;
+
+    @media (max-width: 576px) {
+      & {
+          grid-template:
+            "name name" auto
+            "age gender" auto
+            "breed breed" auto
+            "height weight" auto
+            "photo photo" auto
+            "about about" 6rem / 1fr 1fr; 
+        }
+    }
+
+    @media (max-width: 360px) {
+      & {
+        grid-template:
+          "name" auto
+          "age" auto
+          "gender" auto
+          "breed" auto
+          "height" auto
+          "weight" auto
+          "photo" auto
+          "about" 6rem / 1fr;
+      }
+  }
   }
