--- a/src/styles.scss
+++ b/src/styles.scss
@@ -152,18 +152,30 @@ a{
   }
 
   .buttons{
-    margin-top: 1rem;
     display: flex;
-    gap: 1rem;
-    justify-content: right;
+    justify-content: space-between;
+    gap: 0.5rem;
+    
+    @media (max-width: 576px) {
+      & {
+          
+          flex-wrap: wrap;
+      }
+  }
+
+    .actions{
+      display: flex;
+      gap: 0.5rem;
+    }
     
   }
   
 
   button{
+    font-family: var(--roboto-font);
     border-radius: 25px;
     padding: 0.75rem 1.5rem;
-    height: 2.5rem;
+    min-height: 2.5rem;
     font-weight: var(--font-weight-500);
     letter-spacing: 0.1em;
     text-transform: uppercase;
@@ -262,6 +274,12 @@ a{
     height: 1.5rem;
     box-sizing: border-box;
   }
+
+  textarea{
+    height: 100%;
+    box-sizing: border-box;
+    resize: none;
+}
 
   input, select, textarea{
     border-radius: 4px;
